# living-bridge-os

./: .env.example  LICENSE  README.md  pyproject.toml  requirements.txt
bridge/: __init__.py
bridge/agents/: base_agent.py  claude_agent.py  gemini_agent.py  grok_agent.py  openai_agent.py
bridge/api/: server.py
bridge/artifacts/: artifact.py
bridge/core/: database.py  debate.py  mission.py  orchestrator.py  registry.py  synthesis.py
bridge/memory/: codex_memory.py  episodic_memory.py  working_memory.py
bridge/ui/: dashboard.py
docs/: architecture.md
tests/: test_mission.py
